# bookstore

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.1-MILESTONE-AUDIT.md  v3.1-REQUIREMENTS.md  v3.1-ROADMAP.md  v4.1-MILESTONE-AUDIT.md  v4.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 7b2f3a8c4d1e_add_oauth_accounts_and_nullable_password.py  a1b2c3d4e5f6_add_books_search_vector.py  a1b2c3d4e5f6_create_reviews.py  b2c3d4e5f6a7_create_carts_and_cart_items.py  d4e5f6a7b8c9_create_orders_and_order_items.py  e5f6a7b8c9d0_create_wishlist_items.py  f1a2b3c4d5e6_create_pre_bookings.py
app/: main.py
backend/: docker-compose.yml  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
tests/: conftest.py  test_auth.py  test_book_aggregates.py  test_cart.py  test_discovery.py  test_email.py  test_health.py  test_inventory_analytics.py  test_oauth.py  test_orders.py  test_prebooks.py  test_wishlist.py
(+487 files in other folders)
